allow line wrapping in diffs while preserving the display of intraline diffs containing only whitespace (fixes #1420 and #3966)
git-svn-id: http://trac.edgewall.org/intertrac/log:/trunk@4622 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/htdocs/css/diff.css
+++ b/htdocs/css/diff.css
@@ -150,12 +150,10 @@
 .diff table.inline tbody.mod td del { 
  background: #e99; 
  color: #000;
- white-space: pre;
 }
 .diff table.inline tbody.mod td ins { 
  background: #9e9; 
  color: #000;
- white-space: pre;
 }
 
 /* Styles for the side-by-side diff */
